fix the div order on certificate's templates on the default theme and fix some layout issues on timtec theme

--- a/themes/timtec/static/css/less/certificate.less
+++ b/themes/timtec/static/css/less/certificate.less
@@ -1,20 +1,24 @@
-#certificate{
-    .certificate-content{
-        background-color: rgba(255,255,255,0.5);
-        padding-bottom: 115px;
-    }
-    .certificate-container{
-
-      &.receipt{
-        font-family: 'teuton_25', sans-serif;
-        font-weight: normal;
-        font-size: 1.5em;
-        .course-coordinator{
-          font-family: 'teuton_24', sans-serif;
-        }
-        .coordinator-name{
-            margin: 0;
-        }
+#certificate {
+  #certificate-content {
+    margin-top: -225px;
+    padding-top: 225px;
+    padding-bottom: 50px;
+    background-color: rgba(255,255,255,0.5);
+  }
+  .certificate-container {
+    &.receipt {
+      font-family: 'teuton_25', sans-serif;
+      font-weight: normal;
+      font-size: 1.5em;
+      .course-coordinator {
+        font-family: 'teuton_24', sans-serif;
+      }
+      .coordinator-name {
+          margin: 0;
       }
     }
+  }
+  .download-certificate {
+    margin-bottom: 20px;
+  }
 }
